--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,16 @@
 		<link rel="stylesheet" type="text/css" href="stylesheets/css/main.css"/>
 
 		<!-- Javascript -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script type="text/javascript">
+			// Global environment variables, etc
+			VIEWPORT_WIDTH  = 800;
+			VIEWPORT_HEIGHT = 600;
+			DEBUG = true;
+		</script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 
-		
+
 	</head>
 	<body>
 		<div class="vertical-center">
