Added basic input, game loop, map, and small stuff
- added the USE_LOCAL_LIBS  flag if your shitty router kicks out all the
time and you dont want to ping google for jquery
+- took all the jquery out of app.js t for the flag above, but nothing
fancy here
- added the Map class with the startings of collision detection

--- a/html/index.html
+++ b/html/index.html
@@ -12,10 +12,11 @@
 			VIEWPORT_WIDTH  = 800;
 			VIEWPORT_HEIGHT = 480;
 			DEBUG = true;
+			USE_LOCAL_LIBS = true;
 		</script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		
+		<!-- JS engine entry point -->
 		<script type="text/javascript" src="js/app.js"></script>
-
 
 	</head>
 	<body>
